--- a/package.json
+++ b/package.json
@@ -31,9 +31,11 @@
     "react-dom": "18.2.0",
     "react-native": "0.74.2",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-heroicons": "^4.0.0",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
+    "react-native-svg": "^15.3.0",
     "react-native-web": "~0.19.10"
   },
   "devDependencies": {
