Initialize firebase and change folder structure

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "deliveroo",
+  "name": "prit-foodie",
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
@@ -29,6 +29,7 @@
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.6",
     "expo-web-browser": "~13.0.3",
+    "firebase": "^10.12.5",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -36,14 +37,14 @@
     "react-native-animatable": "^1.4.0",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-heroicons": "^4.0.0",
+    "react-native-maps": "1.14.0",
     "react-native-progress": "^5.0.1",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-svg": "^15.3.0",
     "react-native-web": "~0.19.10",
-    "react-redux": "^9.1.2",
-    "react-native-maps": "1.14.0"
+    "react-redux": "^9.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
