--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "react-native-screens": "3.31.1",
     "react-native-svg": "^15.3.0",
     "react-native-web": "~0.19.10",
-    "react-redux": "^9.1.2"
+    "react-redux": "^9.1.2",
+    "tailwind-merge": "^2.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
