--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "paths": {
       "@/*": [
         "./*"
-      ]
+      ],"@firebase/auth": ["./node_modules/@firebase/auth/dist/index.rn.d.ts"]
     }
   },
   "include": [
