--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-native-heroicons": "^4.0.0",
     "react-native-maps": "1.14.0",
     "react-native-progress": "^5.0.1",
+    "react-native-radio-buttons-group": "^3.1.0",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
