--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "expo-dev-client": "~4.0.21",
     "expo-font": "~12.0.7",
     "expo-linking": "~6.3.1",
+    "expo-location": "^17.0.1",
     "expo-router": "~3.5.16",
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
